--- a/handlebars/views/allJokes.hbs
+++ b/handlebars/views/allJokes.hbs
@@ -2,7 +2,7 @@
 <div>
     <ul>
     {{#each jokes}}
-        <li>{{@index}}. {{this}}</li>
+        <li>{{@index}}. {{joke}}</li>
     {{/each}}
     </ul>
 </div>
